# lnforum-smf-migrate

./: Makefile  README.md  ln-smf-migration.cabal  lnforum-smf-migration.cabal  stack.yaml
app/: Main.hs
notes/tables/: smf_boards.txt  smf_categories.txt  smf_log_gpbp.txt  smf_members.txt  smf_messages.txt  smf_personal_messages.txt  smf_topics.txt
src/LN/SMF/: Migration.hs
src/LN/SMF/Migration/: Board.hs  Connect.hs  Control.hs  Forum.hs  Organization.hs  Pm.hs  Sanitize.hs  Thread.hs  ThreadPost.hs  ThreadPostLike.hs  User.hs
src/LN/SMF/Migration/Connect/: MySQL.hs  Redis.hs
