name:                ln-smf-migration
version:             0.1.0.0
synopsis:            Hacky library to migrate the SMF (Simple Machines Forum) database to LN.
description:         Please see README.md
homepage:            http://github.com/adarqui/ln-smf-migration#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LN.SMF.Migration
                       LN.SMF.Migration.Board
                       LN.SMF.Migration.Connect
                       LN.SMF.Migration.Connect.MySQL
                       LN.SMF.Migration.Connect.Redis
                       LN.SMF.Migration.Control
                       LN.SMF.Migration.Forum
                       LN.SMF.Migration.Organization
                       LN.SMF.Migration.Pm
                       LN.SMF.Migration.Sanitize
                       LN.SMF.Migration.Thread
                       LN.SMF.Migration.ThreadPost
                       LN.SMF.Migration.ThreadPostLike
                       LN.SMF.Migration.User
  build-depends:       base
                     , ln-api
                     , ln-types
                     , ln-lib
                     , haskell-api-helpers
                     , bytestring
                     , break
                     , fast-tagsoup
                     , hakyll
                     , hedis
                     , monad-loops
                     , mtl
                     , mysql-simple
                     , persistent
                     , persistent-mysql
                     , persistent-postgresql
                     , persistent-template
                     , postgresql-simple
                     , text
                     , time
                     , transformers
                     , wreq
                     , text-regex-replace
  default-language:    Haskell2010

executable ln-smf-migrate
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , ln-smf-migration
                     , text
  default-language:    Haskell2010

test-suite ln-smf-migration-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ln-smf-migration
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/ln-smf-migration
